--- a/mts.configurator/package.json
+++ b/mts.configurator/package.json
@@ -4,10 +4,12 @@
   "private": true,
   "dependencies": {
     "@types/react-redux": "^6.0.9",
+    "@types/react-router": "^4.4.1",
     "@types/redux": "^3.6.0",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
     "react-redux": "^5.1.1",
+    "react-router": "^4.3.1",
     "react-scripts-ts": "3.1.0",
     "redux": "^4.0.1",
     "redux-devtools-extension": "^2.13.5"
